--- a/Lab 9-10/Lab 09 - 10.md
+++ b/Lab 9-10/Lab 09 - 10.md
@@ -66,3 +66,38 @@
 
 
 02. Type  <i>kill -9 < PID ></i> to forcefully terminate a process by  <i> SIGKILL </i>: ![image](https://github.com/user-attachments/assets/7f1e8bd7-8b67-43eb-b578-62c4cb679ad3)
+
+
+<hr>
+<h5>Lab 10</h5>
+
+<h6> > Installing :</h6>
+
+Type <i>sudo apt-get install < package-name ></i>: ![image](https://github.com/user-attachments/assets/e4582b5f-cda6-4adf-ac0f-b928a924d0fa)
+
+![image](https://github.com/user-attachments/assets/567dc54d-6fce-4379-bfe7-5ead9960d8d8)
+
+
+
+<h6> > Updating software and packages: </h6>
+
+Type <i>sudo apt-get update</i>: 
+![image](https://github.com/user-attachments/assets/5f6be82a-ce3c-4270-b512-4e59bf42d61f)
+
+![image](https://github.com/user-attachments/assets/0b0c69a5-35fa-4b78-a99a-2fa93c469155)
+
+
+<h6>
+  > Removing the software with apt-get
+</h6>
+
+01. Type<i> sudo apt-get remove < package-name ></i>: ![image](https://github.com/user-attachments/assets/206a40dd-32fb-48a4-a4a3-9eb57b48cb56)
+![image](https://github.com/user-attachments/assets/6c5e33f2-c7e5-43c2-b021-346230b9f3c4)
+
+
+
+02. Type <i> sudo apt-get purge < package-name ></i> to remove the package and its configurations:
+    ![image](https://github.com/user-attachments/assets/8d11c6d8-cc0a-459c-93c6-0feeb00afba7)
+
+<hr>
+<h1> 🚀 Now, we are done!!  🚀</h1>
