--- a/Lab 9-10/Lab 09 - 10.md
+++ b/Lab 9-10/Lab 09 - 10.md
@@ -62,7 +62,9 @@
 
 <h6> > kill : used to send signals to processes to terminate or control them</h6>  
 
-01. Type  <i>kill < PID ></i> to terminate a process by its PID: ![image](https://github.com/user-attachments/assets/199835fd-3a31-4919-adf6-681d00813852)
+01. Type  <i>kill < PID ></i> to terminate a process by its PID: 
+
+![image](https://github.com/user-attachments/assets/199835fd-3a31-4919-adf6-681d00813852)
 
 
 02. Type  <i>kill -9 < PID ></i> to forcefully terminate a process by  <i> SIGKILL </i>: ![image](https://github.com/user-attachments/assets/7f1e8bd7-8b67-43eb-b578-62c4cb679ad3)
