Completed Lab 07-08.md
01. Create the /home/consultants directory. Add write permission to the consultants group. Use the symbolic method for setting the appropriate permissions.

02. Forbid others from accessing files in the /home/consultants directory. Use the octal method for setting the appropriate permissions. Change the default umask for the operator1 user. The new umask prohibits all access for users that are not in their group. Confirm that the umask is changed.

--- a/Lab 7-8/Lab 07-08.md
+++ b/Lab 7-8/Lab 07-08.md
@@ -42,6 +42,11 @@ group. Confirm that the umask is changed.
 
 ![image](https://github.com/user-attachments/assets/e4dd157a-71cd-452c-b7e6-91f8256fbba3)
 
+02. Check the exisiting umask, by typing <i>umask</i>
+
+03. Change the umask to 0066 so as to prohibit the group from all the permissions.
+04. Then check the permission by <i>ls- l</i> 
+![image](https://github.com/user-attachments/assets/532224ea-4eab-4b4f-bf85-efbd5568d8d7)
 
 <hr>
 
