--- a/Lab 7-8/Lab 07-08.md
+++ b/Lab 7-8/Lab 07-08.md
@@ -45,7 +45,7 @@ group. Confirm that the umask is changed.
 02. Check the exisiting umask, by typing <i>umask</i>
 
 03. Change the umask to 0066 so as to prohibit the group from all the permissions.
-04. Then check the permission by <i>ls- l</i> 
+04. Then check the permission by <i>ls- l</i> <br>
 ![image](https://github.com/user-attachments/assets/532224ea-4eab-4b4f-bf85-efbd5568d8d7)
 
 <hr>
