--- a/Lab 11-12/Lab 11-12.md
+++ b/Lab 11-12/Lab 11-12.md
@@ -39,4 +39,20 @@
      </i>
       ![image](https://github.com/user-attachments/assets/993b0911-2d8b-490e-bb30-0ccdff93e380)
 
+  4. Follow the same steps for operator2 and operator3 as well:
+     ![image](https://github.com/user-attachments/assets/6d439922-9f88-45cc-a790-8ef27706268b)
+
+     <h5>
+       Lab 12:
+     </h5>
+     1. To add the comments on a particular user, type: <br>
+     <i>sudo usermod -c "Operator1's comment" operator1</i>
+     
+     ![image](https://github.com/user-attachments/assets/46d9550c-63cb-49c8-9603-62e5630323d1)
+
+    2. To delete the user...<br><i>sudo userdel -r operator</i><br>
+    
+   ![image](https://github.com/user-attachments/assets/140b490b-6b6c-4a6a-b278-83fd3585d444)
+
+---
      
